--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "ext-pdo": "*",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.4.3",
@@ -14,8 +15,8 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "spatie/laravel-multitenancy": "^2.0",
-        "tightenco/ziggy": "^1.0",
-        "ext-pdo": "*"
+        "spatie/laravel-permission": "^4.2",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
