--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "@fortawesome/free-regular-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/vue-fontawesome": "^3.0.0-4",
+        "@headlessui/vue": "^1.4.0",
+        "@heroicons/vue": "^1.0.4",
         "matice": "^1.1.4"
     }
 }
