webpack-bundle-analyze

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
+APP_URL=http://localhost
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -49,3 +49,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+MIX_ANALYZE_BUNDLE=false
+
+POEDITOR_API_KEY=
+POEDITOR_PROJECT_ID=
