--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.6",
+        "laravel-mix-bundle-analyzer": "^1.0.5",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
