AK-26 Country Select UI

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,5 @@ yarn-error.log
 /.idea
 /.vscode
 /public/copyright.html
-/resources/js/Layouts/AppLayout.bk.vue
-/resources/js/Private/
+/resources/js/private/
 /resources/Legacy/
