--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
         "production": "mix --production"
     },
     "devDependencies": {
+
+        "@headlessui/vue": "^1.4.0",
+        "@heroicons/vue": "^1.0.4",
         "@inertiajs/inertia": "^0.10.0",
         "@inertiajs/inertia-vue3": "^0.5.1",
         "@inertiajs/progress": "^0.2.6",
         "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/typography": "^0.3.0",
         "@vue/compiler-sfc": "^3.0.5",
-        "axios": "^0.21",
         "browser-sync": "^2.27.5",
         "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.6",
         "laravel-mix-bundle-analyzer": "^1.0.5",
-        "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
         "tailwindcss": "^2.0.1",
@@ -30,13 +31,13 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
+        "@vueform/multiselect": "^2.1.2",
         "@fortawesome/fontawesome-svg-core": "^1.2.36",
         "@fortawesome/free-brands-svg-icons": "^5.15.4",
         "@fortawesome/free-regular-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/vue-fontawesome": "^3.0.0-4",
-        "@headlessui/vue": "^1.4.0",
-        "@heroicons/vue": "^1.0.4",
-        "matice": "^1.1.4"
+        "matice": "^1.1.4",
+        "axios": "^0.21"
     }
 }
