--- a/.env.example
+++ b/.env.example
@@ -51,5 +51,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 MIX_ANALYZE_BUNDLE=false
 
-POEDITOR_API_KEY=
-POEDITOR_PROJECT_ID=
+PO_EDITOR_API_KEY=
+PO_EDITOR_READ_ONLY_API_KEY=
+PO_EDITOR_PROJECT_ID=
