--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,12 @@
         "genl/matice": "^1.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.4.3",
+        "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^8.54",
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "owen-it/laravel-auditing": "^12.0",
         "spatie/laravel-multitenancy": "^2.0",
         "spatie/laravel-permission": "^4.2",
         "tightenco/ziggy": "^1.0",
