--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,10 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "owen-it/laravel-auditing": "^12.0",
+        "protonemedia/inertiajs-tables-laravel-query-builder": "^1.2",
         "spatie/laravel-multitenancy": "^2.0",
         "spatie/laravel-permission": "^4.2",
+        "spatie/laravel-query-builder": "^3.5",
         "tightenco/ziggy": "^1.0",
         "vemcogroup/laravel-translation": "^3.0"
     },
