--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "production": "mix --production"
     },
     "devDependencies": {
-
         "@headlessui/vue": "^1.4.0",
         "@heroicons/vue": "^1.0.4",
         "@inertiajs/inertia": "^0.10.0",
@@ -31,13 +30,14 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
-        "@vueform/multiselect": "^2.1.2",
         "@fortawesome/fontawesome-svg-core": "^1.2.36",
         "@fortawesome/free-brands-svg-icons": "^5.15.4",
         "@fortawesome/free-regular-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/vue-fontawesome": "^3.0.0-4",
-        "matice": "^1.1.4",
-        "axios": "^0.21"
+        "@protonemedia/inertiajs-tables-laravel-query-builder": "^1.3.4",
+        "@vueform/multiselect": "^2.1.2",
+        "axios": "^0.21",
+        "matice": "^1.1.4"
     }
 }
