--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@protonemedia/inertiajs-tables-laravel-query-builder": "^1.3.4",
         "@vueform/multiselect": "^2.1.2",
         "axios": "^0.21",
-        "matice": "^1.1.4"
+        "matice": "^1.1.4",
+        "v-calendar": "^3.0.0-alpha.5"
     }
 }
