AK-24 Register patient

--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,10 @@ MIX_ANALYZE_BUNDLE=false
 PO_EDITOR_API_KEY=
 PO_EDITOR_READ_ONLY_API_KEY=
 PO_EDITOR_PROJECT_ID=
+
+COUNTRY=GB
+FAKER_LOCALE=en_GB
+FAKER_COUNTRY="${COUNTRY}"
+
+TWILIO_SID=
+TWILIO_TOKEN=
