--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "spatie/laravel-permission": "^4.2",
         "spatie/laravel-query-builder": "^3.5",
         "tightenco/ziggy": "^1.0",
+        "twilio/sdk": "^6.28",
         "vemcogroup/laravel-translation": "^3.0"
     },
     "require-dev": {
