--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "owen-it/laravel-auditing": "^12.0",
+        "phlak/semver": "^4.0",
         "protonemedia/inertiajs-tables-laravel-query-builder": "^1.2",
+        "sentry/sentry-laravel": "^2.8",
         "spatie/laravel-multitenancy": "^2.0",
         "spatie/laravel-permission": "^4.2",
         "spatie/laravel-query-builder": "^3.5",
@@ -36,6 +38,7 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
+        "laravel/envoy": "^2.7",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
