--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ APP_DEBUG=true
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=landlord
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
