AK-49 Integrate users models (Fixing problem path needed to compare commits)

--- a/.env.example
+++ b/.env.example
@@ -64,4 +64,11 @@ FAKER_COUNTRY="${COUNTRY}"
 TWILIO_SID=
 TWILIO_TOKEN=
 
-TRUSTED_PROXIES=10.0.0.1,10.0.0.2
+TRUSTED_PROXIES= #ip of the haproxy e.g. 10.0.0.1
+
+#for local
+DEPLOYMENT_HOST=
+DEPLOYMENT_USER=
+DEPLOYMENT_PATH=
+#for production
+DEPLOYMENT_REPO_PATH=
