--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
+        "laravel/breeze": "^1.4",
         "laravel/envoy": "^2.7",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
