--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
         "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/typography": "^0.3.0",
         "@vue/compiler-sfc": "^3.0.5",
+        "autoprefixer": "^10.2.4",
         "browser-sync": "^2.27.5",
         "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.6",
         "laravel-mix-bundle-analyzer": "^1.0.5",
-        "postcss": "^8.1.14",
-        "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.1",
+        "postcss": "^8.2.13",
+        "postcss-import": "^14.0.1",
+        "tailwindcss": "^2.1.2",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
     },
