--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-APP_URL=http://localhost
-APP_API_DOMAIN=api.localhost
+APP_DOMAIN=localhost
+APP_URL="http://${APP_DOMAIN}"
 
 APP_NAME=Laravel
 APP_ENV=local
