--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
+        "dev": "npm --section=tenants run development",
+        "watch": "npm --section=tenants run _watch",
+        "prod": "npm --section=tenants run production",
+
+        "dev_landlord": "npm --section=landlord run development",
+        "watch_landlord": "npm --section=landlord run _watch",
+        "prod_landlord": "npm --section=landlord run production",
+
+
         "development": "mix",
-        "watch": "mix watch",
+        "_watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
@@ -39,6 +47,7 @@
         "@protonemedia/inertiajs-tables-laravel-query-builder": "^1.3.4",
         "@vueform/multiselect": "^2.1.2",
         "axios": "^0.21",
+        "laravel-mix-merge-manifest": "^2.0.0",
         "matice": "^1.1.4",
         "v-calendar": "^3.0.0-alpha.5",
         "vue-tel-input": "^6.0.0-beta.4"
