--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "lorisleiva/laravel-actions": "^2.1",
         "owen-it/laravel-auditing": "^12.0",
         "phlak/semver": "^4.0",
         "protonemedia/inertiajs-tables-laravel-query-builder": "^1.2",
@@ -44,7 +45,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "wulfheart/laravel-actions-ide-helper": "^0.1.0"
     },
     "autoload": {
         "psr-4": {
