AK-59 System User Actions

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,12 @@ DB_CONNECTION=landlord
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
+DB_USERNAME=
 DB_PASSWORD=
+
+AURORA_DB_HOST=127.0.0.1
+AURORA_DB_USERNAME=
+AURORA_DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
