--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ext-curl": "*",
         "ext-intl": "*",
         "ext-pdo": "*",
+        "ext-zlib": "*",
         "commerceguys/addressing": "^1.2",
         "commerceguys/intl": "^1.1",
         "fakerphp/faker": "^1.15",
@@ -29,14 +30,13 @@
         "protonemedia/inertiajs-tables-laravel-query-builder": "^1.2",
         "sentry/sentry-laravel": "^2.8",
         "spatie/laravel-multitenancy": "^2.0",
-        "spatie/laravel-permission": "^4.2",
+        "spatie/laravel-permission": "^5.1",
         "spatie/laravel-query-builder": "^3.5",
         "spatie/laravel-sluggable": "^3.1",
         "symfony/process": "^5.3",
         "tightenco/ziggy": "^1.0",
         "twilio/sdk": "^6.28",
-        "vemcogroup/laravel-translation": "^3.0",
-        "ext-zlib": "*"
+        "vemcogroup/laravel-translation": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
