--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "symfony/process": "^5.3",
         "tightenco/ziggy": "^1.0",
         "twilio/sdk": "^6.28",
-        "vemcogroup/laravel-translation": "^3.0"
+        "vemcogroup/laravel-translation": "^3.0",
+        "ext-pgsql": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
