--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "ext-curl": "*",
         "ext-intl": "*",
         "ext-pdo": "*",
+        "ext-pgsql": "*",
         "ext-zlib": "*",
         "commerceguys/addressing": "^1.2",
         "commerceguys/intl": "^1.1",
+        "doctrine/dbal": "^3.2",
         "fakerphp/faker": "^1.15",
         "fruitcake/laravel-cors": "^2.0",
         "genl/matice": "^1.1",
@@ -36,8 +38,7 @@
         "symfony/process": "^5.3",
         "tightenco/ziggy": "^1.0",
         "twilio/sdk": "^6.28",
-        "vemcogroup/laravel-translation": "^3.0",
-        "ext-pgsql": "*"
+        "vemcogroup/laravel-translation": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
