--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,12 @@
         "spatie/laravel-permission": "^5.1",
         "spatie/laravel-query-builder": "^3.5",
         "spatie/laravel-sluggable": "^3.1",
+        "spatie/temporary-directory": "^2.0",
         "symfony/process": "^5.3",
         "tightenco/ziggy": "^1.0",
         "twilio/sdk": "^6.28",
-        "vemcogroup/laravel-translation": "^3.0"
+        "vemcogroup/laravel-translation": "^3.0",
+      "ext-mbstring": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
