--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ yarn-error.log
 !*/deployment/Envoy.blade.php
 /deployment/*
 /.phpstorm.meta.php/_ide_helper.php
+/.phpstorm.meta.php/_ide_helper_models.php
