--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "owen-it/laravel-auditing": "^12.0",
         "phlak/semver": "^4.0",
         "protonemedia/inertiajs-tables-laravel-query-builder": "^1.2",
+        "ralouphie/mimey": "^1.0",
         "sentry/sentry-laravel": "^2.8",
         "spatie/laravel-multitenancy": "^2.0",
         "spatie/laravel-permission": "^5.1",
