--- a/package.json
+++ b/package.json
@@ -3,39 +3,35 @@
     "scripts": {
         "dev": "npm --section=tenants run development",
         "watch": "npm --section=tenants run _watch",
-        "prod": "npm --section=tenants run production",
-
+        "prod": "npm run production",
         "dev_landlord": "npm --section=landlord run development",
         "watch_landlord": "npm --section=landlord run _watch",
         "prod_landlord": "npm --section=landlord run production",
-
-
         "development": "mix",
         "_watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
-        "prod": "npm run production",
         "production": "mix --production"
     },
     "devDependencies": {
-        "@headlessui/vue": "^1.4.0",
-        "@heroicons/vue": "^1.0.4",
+        "@headlessui/vue": "^1.4.2",
+        "@heroicons/vue": "^1.0.5",
         "@inertiajs/inertia": "^0.10.0",
         "@inertiajs/inertia-vue3": "^0.5.1",
         "@inertiajs/progress": "^0.2.6",
-        "@tailwindcss/forms": "^0.2.1",
-        "@tailwindcss/typography": "^0.3.0",
+        "@tailwindcss/forms": "^0.4.0",
+        "@tailwindcss/typography": "^0.5.0",
         "@vue/compiler-sfc": "^3.0.5",
-        "autoprefixer": "^10.2.4",
+        "autoprefixer": "^10.4.2",
         "browser-sync": "^2.27.5",
         "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.6",
         "laravel-mix-bundle-analyzer": "^1.0.5",
-        "postcss": "^8.2.13",
+        "postcss": "^8.4.5",
         "postcss-import": "^14.0.1",
-        "tailwindcss": "^2.1.2",
-        "vue": "^3.0.5",
+        "tailwindcss": "^3.0.12",
+        "vue": "^3.2.26",
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
@@ -49,6 +45,7 @@
         "axios": "^0.21",
         "laravel-mix-merge-manifest": "^2.0.0",
         "matice": "^1.1.4",
+        "modern-normalize": "^1.1.0",
         "v-calendar": "^3.0.0-alpha.5",
         "vue-tel-input": "^6.0.0-beta.4"
     }
