--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ yarn-error.log
 /deployment/*
 /.phpstorm.meta.php/_ide_helper.php
 /.phpstorm.meta.php/_ide_helper_models.php
+/tailwind.config.js
