AK-142 UI edit employee

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ext-pdo": "*",
         "ext-pgsql": "*",
         "ext-zlib": "*",
+        "alexstewartja/laravel-attribute-observer": "^1.2",
         "commerceguys/addressing": "^1.2",
         "commerceguys/intl": "^1.1",
         "doctrine/dbal": "^3.2",
