--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "genl/matice": "^1.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.4.3",
+        "itsgoingd/clockwork": "^5.1",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^8.54",
         "laravel/horizon": "^5.7",
