--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,17 @@
         "fakerphp/faker": "^1.15",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "http-interop/http-factory-guzzle": "^1.2",
         "inertiajs/inertia-laravel": "^0.4.3",
         "itsgoingd/clockwork": "^5.1",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^8.54",
         "laravel/horizon": "^5.7",
         "laravel/sanctum": "^2.6",
+        "laravel/scout": "^9.4",
         "laravel/tinker": "^2.5",
         "lorisleiva/laravel-actions": "^2.1",
+        "meilisearch/meilisearch-php": "^0.21.0",
         "owen-it/laravel-auditing": "^12.0",
         "phlak/semver": "^4.0",
         "protonemedia/inertiajs-tables-laravel-query-builder": "^1.2",
