--- a/package.json
+++ b/package.json
@@ -1,17 +1,8 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm --section=tenants run development",
-        "watch": "npm --section=tenants run _watch",
-        "prod": "npm run production",
-        "dev_landlord": "npm --section=landlord run development",
-        "watch_landlord": "npm --section=landlord run _watch",
-        "prod_landlord": "npm --section=landlord run production",
-        "development": "mix",
-        "_watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "production": "mix --production"
+        "start": "vite",
+        "production": "vite build"
     },
     "devDependencies": {
         "@headlessui/vue": "^1.4.2",
@@ -21,16 +12,18 @@
         "@inertiajs/progress": "^0.2.6",
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.0",
-        "@vue/compiler-sfc": "^3.0.5",
+        "@vitejs/plugin-vue": "^2.1.0",
+        "@vue/compiler-sfc": "^3.2.29",
         "autoprefixer": "^10.4.2",
         "browser-sync": "^2.27.5",
         "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.3",
-        "laravel-mix": "^6.0.6",
+        "dotenv": "^16.0.0",
         "laravel-mix-bundle-analyzer": "^1.0.5",
         "postcss": "^8.4.5",
         "postcss-import": "^14.0.1",
         "tailwindcss": "^3.0.12",
+        "vite": "^2.7.13",
         "vue": "^3.2.26",
         "vue-loader": "^16.1.2"
     },
