Upgrade to laravel 9

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ yarn-error.log
 /.phpstorm.meta.php/_ide_helper_models.php
 /tailwind.config.js
 /resources/private/
+/.phpstorm.meta.php
+/public/build/
