--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
         "@inertiajs/progress": "^0.2.6",
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.0",
+        "@types/qs": "^6.9.7",
         "@vitejs/plugin-vue": "^2.1.0",
         "@vue/compiler-sfc": "^3.2.29",
         "autoprefixer": "^10.4.2",
-        "browser-sync": "^2.27.5",
-        "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.3",
         "dotenv": "^16.0.0",
         "laravel-mix-bundle-analyzer": "^1.0.5",
@@ -38,7 +37,10 @@
         "@vueform/multiselect": "^2.1.2",
         "axios": "^0.21",
         "laravel-mix-merge-manifest": "^2.0.0",
+        "lodash-es": "^4.17.21",
         "modern-normalize": "^1.1.0",
+        "pinia": "^2.0.11",
+        "qs": "github:ljharb/qs",
         "v-calendar": "^3.0.0-alpha.5",
         "vue-boring-avatars": "^1.0.0",
         "vue-country-flag-next": "^2.3.2",
