--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
         "@heroicons/vue": "^1.0.5",
         "@inertiajs/inertia": "^0.10.0",
         "@inertiajs/inertia-vue3": "^0.5.1",
-        "@inertiajs/progress": "^0.2.6",
+        "@inertiajs/progress": "^0.2.7",
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.0",
+        "@types/nprogress": "^0.2.0",
         "@types/qs": "^6.9.7",
         "@vitejs/plugin-vue": "^2.1.0",
         "@vue/compiler-sfc": "^3.2.29",
@@ -39,6 +40,7 @@
         "laravel-mix-merge-manifest": "^2.0.0",
         "lodash-es": "^4.17.21",
         "modern-normalize": "^1.1.0",
+        "nprogress": "^0.2.0",
         "pinia": "^2.0.11",
         "qs": "github:ljharb/qs",
         "v-calendar": "^3.0.0-alpha.5",
