--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-zlib": "*",
         "commerceguys/addressing": "^1.2",
         "commerceguys/intl": "^1.1",
         "fruitcake/laravel-cors": "^2.0.5",
@@ -23,6 +24,7 @@
         "meilisearch/meilisearch-php": "^0.21.0",
         "owen-it/laravel-auditing": "^12.2",
         "phlak/semver": "^4.0",
+        "propaganistas/laravel-phone": "^4.3",
         "protonemedia/inertiajs-tables-laravel-query-builder": "^1.4",
         "ralouphie/mimey": "^1.0",
         "sentry/sentry-laravel": "^2.11",
@@ -33,10 +35,8 @@
         "spatie/temporary-directory": "^2.0",
         "symfony/process": "^6.0",
         "tightenco/ziggy": "^1.4",
-        "twilio/sdk": "^6.34",
         "vemcogroup/laravel-translation": "^3.0",
-        "wulfheart/laravel-actions-ide-helper": "dev-l9-compatibility",
-        "ext-zlib": "*"
+        "wulfheart/laravel-actions-ide-helper": "dev-l9-compatibility"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
