AK-199 Customize table templates + clean up

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,12 @@
         "paths": {
             "@/*": [
                 "resources/*"
+            ],
+            "@s/*": [
+                "resources/scripts/*"
+            ],
+            "@c/*": [
+                "resources/views/components/*"
             ]
         }
     },
