--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "axios": "^0.21",
         "laravel-mix-merge-manifest": "^2.0.0",
         "lodash-es": "^4.17.21",
+        "luxon": "^2.3.1",
         "modern-normalize": "^1.1.0",
         "nprogress": "^0.2.0",
         "pinia": "^2.0.11",
