--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-curl": "*",
         "ext-zlib": "*",
         "commerceguys/addressing": "^1.2",
         "commerceguys/intl": "^1.1",
@@ -32,12 +33,13 @@
         "spatie/laravel-permission": "^5",
         "spatie/laravel-query-builder": "^5.0",
         "spatie/laravel-sluggable": "^3",
+        "spatie/laravel-webhook-client": "^3.1",
+        "spatie/laravel-webhook-server": "^3.1",
         "spatie/temporary-directory": "^2.0",
         "symfony/process": "^6.0",
         "tightenco/ziggy": "^1.4",
         "vemcogroup/laravel-translation": "^3.0",
-        "wulfheart/laravel-actions-ide-helper": "dev-l9-compatibility",
-      "ext-curl": "*"
+        "wulfheart/laravel-actions-ide-helper": "dev-l9-compatibility"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
